[package]
name = "avenue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
restful = []
http2 = []
client = []
server = []
full = ["restful", "http2"]

[dependencies]
hyper = { version = "^0.14.23", features = ["full"] }
tokio = { version = "^1", features = ["full"] }
http = "^0.2.8"